Added Post containing codes for students

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -98,7 +98,7 @@ header a {
 }
 
 .post-category {
-  background: #2e2b2b;
+  background: #b9b9b9;
   width: max-content;
   margin: 5px;
   padding: 5px;
